# PortiQ

./: .env.example  .gitignore  CLAUDE.md  README.md  alembic.ini  celery_app.py  pyproject.toml  requirements.txt
.claude/: settings.json
Ship/: Maritime_Platform_Blueprint.docx  Product Catalog Architecture Plan.docx  compass_artifact_wf-261e15d4-a503-41dd-ada5-8fcd18323802_text_markdown.md
Ship/adr/: .phase-config.json  README.md
alembic/: env.py
alembic/versions/: 001_init_extensions.py  002_create_schema.py  003_custom_types.py  004_rls_policies.py  005_search_vector.py  006_widen_impa_code.py  007_catalog_extensibility.py  008_search_enhancements.py  009_multi_tenancy.py  010_supplier_onboarding.py  011_vessel_tracking_events.py  012_rfq_bidding.py  013_intelligence_materialized_views.py  014_document_extractions.py  015_tco_engine.py  016_conversation_sessions.py  017_order_management.py  018_delivery_pod.py  019_dispute_resolution.py  020_settlement_invoicing.py  021_export_jobs.py  022_port_call_requirements.py
apps/web/: middleware.ts  next.config.js  (+3 more)
docs/: FEATURES_AND_ARCHITECTURE.md  SETUP_GUIDE.md
src/: app.py  config.py  exceptions.py  seed.py
tests/: conftest.py  test_catalog_extensibility.py  test_document_ai.py  test_intelligence_service.py  test_onboarding_service.py  test_outbox_service.py  test_prediction_service.py  test_quote_service.py  test_rfq_router.py  test_rfq_service.py  test_search_enhancements.py  test_supplier_router.py  test_tenant_isolation.py  test_tracking_service.py  test_vector_search.py  test_vessel_service.py
(+425 files in other folders)
